--- a/package.json
+++ b/package.json
@@ -9,21 +9,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vee-validate/yup": "^4.11.8",
+    "@vueuse/core": "^10.5.0",
+    "@vueuse/integrations": "^10.5.0",
     "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
     "element-plus": "^2.4.0",
+    "js-cookie": "^3.0.5",
     "pinia": "^2.1.7",
     "postcss-nesting": "^12.0.1",
+    "sass": "^1.69.4",
+    "universal-cookie": "^6.1.1",
     "vee-validate": "^4.11.8",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuex": "^4.0.2",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
-    "sass-loader": "^13.3.2",
+    "prettier": "^3.0.0",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.6"
   }
 }
