--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "element-plus": "^2.4.0",
     "js-cookie": "^3.0.5",
+    "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "postcss-nesting": "^12.0.1",
     "sass": "^1.69.4",
