--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:mock": "cross-env USE_MOCK=true vite",
     "build": "vite build",
     "preview": "vite preview"
   },
