--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.2.5",
+    "vue3-marquee": "^4.1.0",
     "vuex": "^4.0.2",
     "yup": "^1.3.2"
   },
